<resources>
    <string name="app_name">MovieApp</string>
    <string name="app_name_dev">MovieApp(Dev)</string>
    <string name="app_name_production">MovieApp</string>
    <string name="app_name_stagging">StaggingMovie</string>


    <string name="tv_discover">Discover</string>
    <string name="tv_popular_films">Best Popular Films and Serials</string>
    <string name="tv_check_showtimes">Check Movie Showtimes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_showcases">ShowCases</string>
    <string name="btn_more_showcases">More Showcases</string>
    <string name="tv_best_actors">Best Actors</string>

    <string name="text_sample">Behaviors may be used to implement a variety of interactions and additional layout modifications ranging from sliding drawers ato other elements as they move and animate. Children of a CoordinatorLayout may have an anchor. This view Any child views which are set</string>
    <string name="tv_storyline_title">Storyline</string>
    <string name="tv_about_film">About Film</string>
    <string name="tv_original_title">Original Title:</string>
    <string name="tv_type">Type:</string>
    <string name="tv_production">Production:</string>
    <string name="tv_premiere">Premiere:</string>
    <string name="tv_description">Description:</string>
    <string name="btn_more">MORE</string>
    <string name="btn_more_actors">More Actors</string>
    <string name="btn_see_more">SEE MORE</string>
    <string name="viewpod_empty">No Movies Available</string>
    <string name="iv_top">TOP</string>

</resources>
